<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/actionbar"
        layout="@layout/layout_actionbar" />

    <include
        android:id="@+id/tabLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/tab_layout" />

    <ScrollView
        android:id="@+id/contactScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/tabLayout"
        android:layout_below="@id/actionbar"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/contactLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actionbar"
            android:orientation="vertical"
            android:padding="@dimen/large_spacer" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/responsableHeader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/responsibleHeader"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/contactHeader"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contactHeader"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/contactPhoneLabel"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:text="Tel:"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="@string/phone"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/contactEmailLabel"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:text="E-Mail:"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@string/email"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/contactWebLabel"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:text="Web:"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/web"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <WebView
                android:id="@+id/termsView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/responsible"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.your.name.fragments.Navigationbar"
        android:layout_width="250dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>